# sis_team5

./: task2_doc.txt  task4_doc.txt
competition_modules/core/apriltags2_ros/apriltags2_ros/config/: sis_tags.yaml
competition_modules/core/bridge/launch/: bridge.launch
competition_modules/core/bridge/src/: bridge.py
competition_modules/place_to_box/place/: CMakeLists.txt
competition_modules/place_to_box/place/src/: node.py  test_pose.py
competition_modules/pose_estimate_and_pick/grasp/src/: grasping.py  node.py
competition_modules/task3/camera_rotation/launch/: camera_rotation.launch
competition_modules/task3/camera_rotation/src/: get_transform.py
competition_modules/task3/navigation/astar/launch/: navigation.launch
competition_modules/task3/navigation/astar/src/: navigate.py
competition_modules/task3/teleop_twist_joy/launch/: teleop.launch
place_to_box/place/config/rviz/: task2.rviz
place_to_box/place/launch/: task.launch
place_to_box/place/src/: node.py  placing.py  test_pose.py
place_to_box/place/srv/: data.srv
pose_estimate_and_pick/grasp/config/rviz/: task2.rviz
pose_estimate_and_pick/grasp/launch/: task.launch
pose_estimate_and_pick/grasp/src/: get_edge.py  node_gp.py  pc2.py
pose_new/grasp/: CMakeLists.txt  package.xml
pose_new/grasp/launch/: pick.launch  task.launch
pose_new/grasp/models/: doublemint.ply  kinder.ply  kusan.ply
pose_new/grasp/src/: dataset2_pub.py  pick.py  pose_demo.cpp  pose_estimate.cpp  pose_estimate.h  save_1_20_19_18.txt  save_1_20_21_43.txt
task_d/place/: task.launch
